# CppMicroServices

./: CMakeLists.txt
tools/cli_tool/: CMakeLists.txt
tools/cli_tool/src/: diff_tool.py  script.py  utils.py
tools/cli_tool/unittest/: CMakeLists.txt  test_file.py  test_regex.py  test_script.py
tools/cli_tool/unittest/resources/expected/: expected_cpp_basic.txt  expected_no_change.txt
tools/cli_tool/unittest/resources/expected/expected_test_dir/: expected_something.cpp
tools/cli_tool/unittest/resources/test/: cpp_basic.txt
tools/customNS/: CMakeLists.txt  README.md
tools/customNS/src/: diff_tool.py  script.py  utils.py
tools/customNS/test/: test_file.py  test_regex.py  test_script.py  test_utils.py
tools/customNS/test/resources/expected/expected_test_dir_change/inner/: inner.cpp
tools/customNS/test/resources/expected/expected_test_dir_change/inner2/: t.json  test.cpp
tools/customNS/test/resources/test/test_dir_change/: t.json
tools/customNS/test/resources/test/test_dir_change/ignore/: no_change.cpp
tools/customNS/test/resources/test/test_dir_change/inner/: inner.cpp
tools/customNS/test/resources/test/test_dir_change/inner2/: test.cpp
